# compiler

./: .gitignore
lexer/: CMakeLists.txt  README.md  test_debug  test_debug.cpp
lexer/.cache/clangd/index/: lexer.cpp.9412234B3423BDC6.idx  lexer.h.492ACA6ADBB1A743.idx  main.cpp.FA8A6FD38AA2D8E4.idx  test_lexer.cpp.7C91F1CC8BAFDCB4.idx  token.cpp.055ACF65776FD246.idx  token.h.A1A15ECCE8548B20.idx
lexer/include/: lexer.h  token.h
lexer/src/: lexer.cpp  main.cpp  token.cpp
lexer/tests/: CMakeLists.txt  test_lexer.cpp
tests/: strings.ol
